Add transaction management to table creation
Table creation DDLs are now executed within a transaction. On error, the transaction is rolled back and an exception is thrown, ensuring atomicity of table creation operations.